# Tdrive-Zero-knowledge

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
OmniCloud/: package.json
OmniCloud/backend/: .env.example  package.json
OmniCloud/backend/src/: app.js  server.js
OmniCloud/backend/src/adapters/: BaseCloudAdapter.js  GoogleDriveAdapter.js  MegaAdapter.js  OneDriveAdapter.js  PCloudAdapter.js
OmniCloud/backend/src/config/: env.js
OmniCloud/backend/src/middleware/: authMiddleware.js
OmniCloud/docs/: provider-setup.md
api/: dependencies.py  main.py  schemas.py
api/routes/: duplicates.py  files.py  system.py
cli/: main.py
cli/commands/: backup.py  doctor.py  download.py  init.py  login.py  ls.py  maintenance.py  upload.py
core/: manager.py
core/bot/: bridge.py  worker.py
core/db/: manager.py  models.py  session.py
docs/: cli.md  integrity.md  windows_setup.md
web/app/: globals.css  layout.tsx
web/app/(dashboard)/: layout.tsx
web/app/quota/: page.tsx
web/components/explorer/: FileItem.tsx  MoveDialog.tsx  PreviewModal.tsx
web/components/layout/: Header.tsx  Sidebar.tsx
web/components/notifications/: DialogProvider.tsx  IntegrityBanner.tsx  NotificationCenter.tsx
web/components/operations/: NewActionMenu.tsx  UploadButton.tsx
web/components/shared/: DuplicateWarningDialog.tsx
web/components/ui/: Dialog.tsx
web/hooks/api/: useFiles.ts
web/lib/: fileUtils.ts  scrollLock.ts  utils.ts
web/store/: useNotificationStore.ts  useUIStore.ts
web/types/: index.ts
(+35 files in other folders)
