[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdrive"
version = "1.4.0"
description = "TDrive: Telegram-Backend Personal Cloud Storage"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "telethon>=1.30.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "slowapi>=0.1.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
tdrive = "cli.main:app"

[tool.setuptools.packages.find]
include = ["api*", "cli*", "core*"]
